# wevo

./: .gitignore  Cargo.toml  Makefile  PACKAGING.md  QUICKSTART.md  README.md  baileys-doc.md  build-package.sh  install.sh  start.sh
.github/: copilot-instructions.md
baileys-backend/: package-lock.json  package.json  server.js
baileys-backend/routes/: messages.js
baileys-backend/services/: whatsapp.js
baileys-backend/websocket/: manager.js
src/: config.rs  data.rs  main.rs  models.rs
src/ui/: contacts.rs  conversation.rs  mod.rs  preferences.rs  profile_button.rs  widgets.rs
whatsapp-frontend/: Cargo.toml  style.css
whatsapp-frontend/src/: main.rs
whatsapp-frontend/src/models/: contact.rs  db.rs  message.rs  mod.rs
whatsapp-frontend/src/services/: api_client.rs  events.rs  mod.rs  ws_client.rs
whatsapp-frontend/src/ui/: contact_row.rs  main_view.rs  message_row.rs  mod.rs  qr_view.rs  widgets.rs
