[package]
name = "whatsapp-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.7"
libadwaita = { version = "0.5", features = ["v1_4"] }
glib = "0.17"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tungstenite = "0.20"
url = "2"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.13"
